fix(config): Fix issue where address would not fit in box

--- a/src/containers/InformationRows/InformationRows.module.scss
+++ b/src/containers/InformationRows/InformationRows.module.scss
@@ -15,4 +15,5 @@
 .item {
     width: 50%;
     margin-bottom: 1rem;
+    overflow-wrap: break-word;
 }
